--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,8 +1,8 @@
 
 @book{Author:Year:Abbr:1111111,
- author = {Authors},
- title = {Title},
- year = {Year},
- isbn = {isbn},
- publisher = {Publisher},
+  author    = {Authors},
+  title     = {Title},
+  year      = {Year},
+  isbn      = {isbn},
+  publisher = {Publisher}
 }
