Basic Structure and Markdown Content Migration

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,8 +1,20 @@
+ @inproceedings{Layman_Diep_Nagappan_Singer_Deline_Venolia_2013,
+  place     = {Baltimore, Maryland},
+  title     = {Debugging Revisited: Toward Understanding the Debugging Needs of Contemporary Software Developers},
+  isbn      = {978-0-7695-5056-5},
+  url       = {http://ieeexplore.ieee.org/document/6681382/},
+  doi       = {10.1109/ESEM.2013.43},
+  booktitle = {2013 ACM / IEEE International Symposium on Empirical Software Engineering and Measurement},
+  publisher = {IEEE},
+  author    = {Layman, Lucas and Diep, Madeline and Nagappan, Meiyappan and Singer, Janice and Deline, Robert and Venolia, Gina},
+  year      = {2013},
+  month     = {Oct},
+  pages     = {383-392}
+}
 
-@book{Author:Year:Abbr:1111111,
-  author    = {Authors},
-  title     = {Title},
-  year      = {Year},
-  isbn      = {isbn},
-  publisher = {Publisher}
+ @book{Wharton_Rieman_Clayton_Polson_1994,
+  title       = {The Cognitive Walkthrough: A practitioner's guide},
+  institution = {Institute of Cognitive Science, University of Colorado},
+  author      = {Wharton, Cathleen and Rieman, John and Clayton, Lewis and Polson, Peter},
+  year        = {1994}
 }
